Gemini provider — finish the step_list migration
The 2026-05-20 migration shipped only the response side; requests still
emitted role-keyed turn_list, which the server now rejects with HTTP 400
("use step_list input format instead of turn_list").

- InteractionRequest.input is now List<Step> per spec
- Step gains request-side factories (userInput / modelOutput / thought /
  functionCall / functionResult) and an is_error field; isX accessors
  renamed to hasTypeX to dodge the Jackson-treats-isX-as-boolean-getter trap
- ContentItem narrowed to the spec Content union (text / image / audio /
  document / video, inline-data or URI) + thought_signature delta carrier
- tool_choice moved inside generation_config per spec; ToolChoiceConfig
  serializes as bare string or {allowed_tools: {mode, tools}} via @JsonValue
- convertMessages emits Steps directly; each TOOL message becomes its own
  function_result step (no more user-turn coalescing)
- Turn.java deleted

Tests cover every Step type, every Content type incl. PDF/image inline+URI,
multi-turn round-trip, tool_choice serialization, and response parsing for
function_call / function_result / thought / google_search.

SessionDemoIntegrationTest.agentExploresRepoAndWritesToMemory: directive
3-step prompt + SessionLimits maxTurns=12 + accept Success-or-ErrorMaxTurns.
The old open-ended "look at the repo" prompt let Gemini Flash loop on LS
forever; the framework guarantees the test pins down (loop terminates, tool
dispatch fires, no provider errors, clean wire round-trip) are now reliable
regardless of how directive the model decides to be.